--- a/MyPT-AI.ipynb
+++ b/MyPT-AI.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "505ca066",
    "metadata": {},
    "outputs": [
@@ -120,6 +120,16 @@
        "      <td>1</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>testgirl3</td>\n",
+       "      <td>123456</td>\n",
+       "      <td>girl3</td>\n",
+       "      <td>180</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -130,10 +140,11 @@
        "1      feelwjd  123456       민정필     172    70.0    0      \n",
        "2    jasonoh22  123456       오제민     175    70.0    0      \n",
        "3     testgirl  123456  testgirl     155    43.6    1      \n",
-       "4    testgirl2  123456     girl2     150    50.0    1      "
+       "4    testgirl2  123456     girl2     150    50.0    1      \n",
+       "5    testgirl3  123456     girl3     180    70.0    1      "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7aab143f",
    "metadata": {},
    "outputs": [
@@ -277,7 +288,7 @@
        "[299 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "2ca42fa8",
    "metadata": {},
    "outputs": [
@@ -532,7 +543,7 @@
        "28         29          jasonoh22  description"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "3da4b99f",
    "metadata": {},
    "outputs": [
@@ -847,7 +858,7 @@
        "28             29    jasonoh22         29  2021-09-24T00:00:00.000Z  23:39:55"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "62bd985a",
    "metadata": {},
    "outputs": [
@@ -979,7 +990,7 @@
        "[152 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "5989f3c4",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1122,7 @@
        "[152 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "1d5fbf0e",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1209,7 @@
        "139                   139              1          5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "8d3e341a",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1349,7 @@
        "[152 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,17 +1361,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "23251f10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x23333ba2888>"
+       "<seaborn.axisgrid.PairGrid at 0x2d730cc7808>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1383,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "59c1d521",
    "metadata": {},
    "outputs": [
@@ -1514,7 +1525,7 @@
        "[299 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,17 +1552,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ae7284c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000023335EE6308>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002D732FFEB48>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "9ef05a82",
    "metadata": {},
    "outputs": [],
@@ -1574,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "0e3db9fc",
    "metadata": {},
    "outputs": [
@@ -1705,7 +1716,7 @@
        "[130 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1716,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "9b270962",
    "metadata": {},
    "outputs": [
@@ -1825,7 +1836,7 @@
        "하체           31           31     31"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "5f589b06",
    "metadata": {},
    "outputs": [
@@ -1847,7 +1858,7 @@
        "<BarContainer object of 9 artists>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1870,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "9b3b8306",
    "metadata": {},
    "outputs": [
@@ -1880,7 +1891,7 @@
        "<BarContainer object of 9 artists>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1912,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "2ea1021f",
    "metadata": {},
    "outputs": [
@@ -2092,7 +2103,7 @@
        "[152 rows x 7 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2104,7 +2115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "776dfedf",
    "metadata": {},
    "outputs": [
@@ -2533,7 +2544,7 @@
        "129                   112         78  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2544,7 +2555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "a1837e41",
    "metadata": {},
    "outputs": [
@@ -3072,7 +3083,7 @@
        "31                   112         78   하체  스티프 레그 데드리프트 (덤벨)      0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3084,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "specific-railway",
    "metadata": {},
    "outputs": [
@@ -3612,7 +3623,7 @@
        "31                   112         78   하체  스티프 레그 데드리프트 (덤벨)      0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3623,7 +3634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "warming-cedar",
    "metadata": {},
    "outputs": [
@@ -3633,7 +3644,7 @@
        "<BarContainer object of 8 artists>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
